--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,12 @@
         }
     ],
     "minimum-stability": "stable",
-    "require": {}
+    "require": {},
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Innoboxrr\\LaravelSetup\\Providers\\LaravelSetupServiceProvider"
+            ]
+        }
+    },
 }
