--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,10 @@
         }
     ],
     "minimum-stability": "stable",
-    "require": {},
+    "require": {
+        "php": "^8.0|^8.1|^8.2",
+        "laravel/framework": "^9.0|^10.0"
+    },
     "extra": {
         "laravel": {
             "providers": [
