--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "minimum-stability": "stable",
     "require": {
         "php": "^8.0|^8.1|^8.2",
-        "laravel/framework": "^11.0"
+        "laravel/framework": "^11.0 || ^12.0"
     },
     "extra": {
         "laravel": {
